[gd_scene load_steps=3 format=3 uid="uid://dtb3udegv2ipq"]

[ext_resource type="Script" path="res://scenes/observer.gd" id="1_tqt81"]
[ext_resource type="StyleBox" uid="uid://kgh456rotn0u" path="res://assets/panel.tres" id="2_24r12"]

[node name="Observer" type="Node2D"]
script = ExtResource("1_tqt81")
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Camera2D" type="Camera2D" parent="."]
editor_draw_limits = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/UI"]
layout_mode = 1
offset_right = 550.0
offset_bottom = 36.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5

[node name="Panel" type="Panel" parent="CanvasLayer/UI/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_24r12")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="CreateButton" type="Button" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Create"

[node name="EditButton" type="Button" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Edit"

[node name="BackToOriginButton" type="Button" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Back to origin"

[node name="WorldSettingsButton" type="Button" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "World Settings"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TimeScaleMinLineEdit" type="LineEdit" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
expand_to_text_length = true

[node name="TimeScaleSlider" type="HSlider" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
ticks_on_borders = true

[node name="TimeScaleMaxLineEdit" type="LineEdit" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
expand_to_text_length = true

[node name="WorldSettingsPanel" type="VBoxContainer" parent="CanvasLayer/UI/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="GravitationalConstant" type="HBoxContainer" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/WorldSettingsPanel"]
layout_mode = 2

[node name="GravitationalConstantLabel" type="Label" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/WorldSettingsPanel/GravitationalConstant"]
layout_mode = 2
text = "Gravitational Constant:"

[node name="GravitationalConstantResetButton" type="Button" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/WorldSettingsPanel/GravitationalConstant"]
layout_mode = 2
text = "Reset"

[node name="GravitationalConstantNumberLineEdit" type="LineEdit" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/WorldSettingsPanel/GravitationalConstant"]
layout_mode = 2
text = "6.6743"
placeholder_text = "Number"
expand_to_text_length = true

[node name="ExponentialLabel" type="Label" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/WorldSettingsPanel/GravitationalConstant"]
layout_mode = 2
text = "* 10 ^"

[node name="GravitationalConstantPowerLineEdit" type="LineEdit" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/WorldSettingsPanel/GravitationalConstant"]
layout_mode = 2
text = "-11"
placeholder_text = "Power"
expand_to_text_length = true

[node name="GravitationalConstantUnitLabel" type="Label" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/WorldSettingsPanel/GravitationalConstant"]
layout_mode = 2
text = "N m^2 kg^(-2)"

[connection signal="pressed" from="CanvasLayer/UI/MarginContainer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/MarginContainer/VBoxContainer/HBoxContainer/CreateButton" to="." method="_on_create_button_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/MarginContainer/VBoxContainer/HBoxContainer/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/MarginContainer/VBoxContainer/HBoxContainer/BackToOriginButton" to="." method="_on_back_to_origin_button_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/MarginContainer/VBoxContainer/HBoxContainer/WorldSettingsButton" to="." method="_on_world_settings_button_pressed"]
[connection signal="text_submitted" from="CanvasLayer/UI/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/TimeScaleMinLineEdit" to="." method="_on_time_scale_min_line_edit_text_submitted"]
[connection signal="value_changed" from="CanvasLayer/UI/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/TimeScaleSlider" to="." method="_on_time_scale_slider_value_changed"]
[connection signal="text_submitted" from="CanvasLayer/UI/MarginContainer/VBoxContainer/HBoxContainer/HBoxContainer/TimeScaleMaxLineEdit" to="." method="_on_time_scale_max_line_edit_text_submitted"]
[connection signal="pressed" from="CanvasLayer/UI/MarginContainer/VBoxContainer/WorldSettingsPanel/GravitationalConstant/GravitationalConstantResetButton" to="." method="_on_gravitational_constant_reset_button_pressed"]
[connection signal="text_submitted" from="CanvasLayer/UI/MarginContainer/VBoxContainer/WorldSettingsPanel/GravitationalConstant/GravitationalConstantNumberLineEdit" to="." method="_on_gravitational_constant_number_line_edit_text_submitted"]
[connection signal="text_submitted" from="CanvasLayer/UI/MarginContainer/VBoxContainer/WorldSettingsPanel/GravitationalConstant/GravitationalConstantPowerLineEdit" to="." method="_on_gravitational_constant_power_line_edit_text_submitted"]
